--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "eslint .",
     "start": "node server"
   },
+  "engines": {
+    "yarn": "^1.22",
+    "node": ">=16"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
